<resources>
    <string name="app_name">Bank</string>
    <string name="action_settings">Mon compte</string>
    <string name="debAccueil">Dépense : %s</string>
    <string name="soldAccueil">Solde : %s</string>
    <string name="credAccueil">Entrée : %s</string>
    <string name="monthAcc">Mois: %s</string>
    <string name="newTierLbl">Tiers: </string>
    <string name="newPaymentLbl">Moyen de paiement: </string>
    <string name="newDateOp">Date: </string>
    <string name="newMontant">Montant: </string>
    <string name="cancel">Annuler</string>
    <string name="add">Ok!</string>
    <string name="typeMouv">Mouvement: </string>
    <string name="entre">Entrée</string>
    <string name="sortit">Sortit</string>
    <string name="rapp">Rapprochement</string>
    <string name="lblRapp">Solde à atteindre: </string>
    <string name="tierMenu">Tiers</string>
    <string name="paymentMenu">Paiement</string>
    <string name="histoRapp">Historique des rapprochements</string>
    <string name="actSolde">Reste : %s</string>
    <string name="soldeAtt">A atteindre: %s</string>
    <string name="title_activity_rapprochement">Rapprochement</string>
    <string name="alertSolde">Les soldes doivent correspondre.</string>
    <string name="title_activity_tiers">TiersActivity</string>
</resources>
